# youtube_smart_transcriber_bot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
bot/: __main__.py  config.py  db.py  keyboards.py  logging.py
bot/handlers/: __init__.py  admin.py  payments.py  start.py  summarize.py
bot/services/: payments.py  quota.py  summarizer.py  transcript.py
deploy/: deploy.sh  youtube-smart-transcriber.service
migrations/: 001_initial.sql  002_add_summary_credits.sql
tests/: conftest.py  test_db.py
